--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^13.2.1",
         "@rollup/plugin-typescript": "^8.3.2",
-        "jest": "^27.5.1",
         "tslib": "^2.3.1",
         "typescript": "^4.6.3"
     },
     "dependencies": {
-        "my-world": "0.0.1"
+        "mark5": "0.0.2",
+        "mark5-ui": "0.0.1"
     }
 }
