--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "typescript": "^4.6.3"
     },
     "dependencies": {
+        "@antv/g6": "^4.7.10",
         "mark5": "0.0.2",
         "mark5-ui": "0.0.1"
     }
